cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es i sitio web
-        Sigueme en twitter en _galdriel, si tienes dudas pregúntame
+        Hola amigas y amigos este es i sitio web
+        Sigueme en twitter en _galdriel, si tienes dudas pregúntame en vivo en mi twitch.tv
     </p>
 </body>
 </html>
